wrapper.h

    typedef UINT16      uint16_t;
    typedef UINT32      uint32_t;
    typedef INT32       int32_t;
    typedef UINT16      uint16_t;
    typedef UINT32      uint32_t;
    typedef INT32       int32_t;
    typedef struct _DNSServiceRef_t *DNSServiceRef;
    typedef struct _DNSRecordRef_t *DNSRecordRef;
    enum
    {
        kDNSServiceFlagsMoreComing          = 0x1,
        kDNSServiceFlagsAdd                 = 0x2,
        kDNSServiceFlagsDefault             = 0x4,
        kDNSServiceFlagsNoAutoRename        = 0x8,
        kDNSServiceFlagsShared              = 0x10,
        kDNSServiceFlagsUnique              = 0x20,
        kDNSServiceFlagsBrowseDomains       = 0x40,
        kDNSServiceFlagsRegistrationDomains = 0x80,
        kDNSServiceFlagsLongLivedQuery      = 0x100,
        kDNSServiceFlagsAllowRemoteQuery    = 0x200,
        kDNSServiceFlagsForceMulticast      = 0x400,
        kDNSServiceFlagsReturnCNAME         = 0x800
    };
    enum
    {
        kDNSServiceClass_IN       = 1       
    };
    enum
    {
        kDNSServiceType_A         = 1,      
        kDNSServiceType_NS        = 2,      
        kDNSServiceType_MD        = 3,      
        kDNSServiceType_MF        = 4,      
        kDNSServiceType_CNAME     = 5,      
        kDNSServiceType_SOA       = 6,      
        kDNSServiceType_MB        = 7,      
        kDNSServiceType_MG        = 8,      
        kDNSServiceType_MR        = 9,      
        kDNSServiceType_NULL      = 10,     
        kDNSServiceType_WKS       = 11,     
        kDNSServiceType_PTR       = 12,     
        kDNSServiceType_HINFO     = 13,     
        kDNSServiceType_MINFO     = 14,     
        kDNSServiceType_MX        = 15,     
        kDNSServiceType_TXT       = 16,     
        kDNSServiceType_RP        = 17,     
        kDNSServiceType_AFSDB     = 18,     
        kDNSServiceType_X25       = 19,     
        kDNSServiceType_ISDN      = 20,     
        kDNSServiceType_RT        = 21,     
        kDNSServiceType_NSAP      = 22,     
        kDNSServiceType_NSAP_PTR  = 23,     
        kDNSServiceType_SIG       = 24,     
        kDNSServiceType_KEY       = 25,     
        kDNSServiceType_PX        = 26,     
        kDNSServiceType_GPOS      = 27,     
        kDNSServiceType_AAAA      = 28,     
        kDNSServiceType_LOC       = 29,     
        kDNSServiceType_NXT       = 30,     
        kDNSServiceType_EID       = 31,     
        kDNSServiceType_NIMLOC    = 32,     
        kDNSServiceType_SRV       = 33,     
        kDNSServiceType_ATMA      = 34,     
        kDNSServiceType_NAPTR     = 35,     
        kDNSServiceType_KX        = 36,     
        kDNSServiceType_CERT      = 37,     
        kDNSServiceType_A6        = 38,     
        kDNSServiceType_DNAME     = 39,     
        kDNSServiceType_SINK      = 40,     
        kDNSServiceType_OPT       = 41,     
        kDNSServiceType_TKEY      = 249,    
        kDNSServiceType_TSIG      = 250,    
        kDNSServiceType_IXFR      = 251,    
        kDNSServiceType_AXFR      = 252,    
        kDNSServiceType_MAILB     = 253,    
        kDNSServiceType_MAILA     = 254,    
        kDNSServiceType_ANY       = 255     
    };
    enum
    {
        kDNSServiceErr_NoError             = 0,
        kDNSServiceErr_Unknown             = -65537,       
        kDNSServiceErr_NoSuchName          = -65538,
        kDNSServiceErr_NoMemory            = -65539,
        kDNSServiceErr_BadParam            = -65540,
        kDNSServiceErr_BadReference        = -65541,
        kDNSServiceErr_BadState            = -65542,
        kDNSServiceErr_BadFlags            = -65543,
        kDNSServiceErr_Unsupported         = -65544,
        kDNSServiceErr_NotInitialized      = -65545,
        kDNSServiceErr_AlreadyRegistered   = -65547,
        kDNSServiceErr_NameConflict        = -65548,
        kDNSServiceErr_Invalid             = -65549,
        kDNSServiceErr_Firewall            = -65550,
        kDNSServiceErr_Incompatible        = -65551,        
        kDNSServiceErr_BadInterfaceIndex   = -65552,
        kDNSServiceErr_Refused             = -65553,
        kDNSServiceErr_NoSuchRecord        = -65554,
        kDNSServiceErr_NoAuth              = -65555,
        kDNSServiceErr_NoSuchKey           = -65556,
        kDNSServiceErr_NATTraversal        = -65557,
        kDNSServiceErr_DoubleNAT           = -65558,
        kDNSServiceErr_BadTime             = -65559
    };
    typedef uint32_t DNSServiceFlags;
    typedef int32_t DNSServiceErrorType;
    int DNSSD_API DNSServiceRefSockFD(DNSServiceRef sdRef);
    DNSServiceErrorType DNSSD_API DNSServiceProcessResult(DNSServiceRef sdRef);
    void DNSSD_API DNSServiceRefDeallocate(DNSServiceRef sdRef);
    typedef void (DNSSD_API *DNSServiceDomainEnumReply)
    (
     DNSServiceRef                       sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     DNSServiceErrorType                 errorCode,
     const char                          *replyDomain,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceEnumerateDomains
    (
     DNSServiceRef                       *sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     DNSServiceDomainEnumReply           callBack,
     void                                *context  
    );
    typedef void (DNSSD_API *DNSServiceRegisterReply)
    (
     DNSServiceRef                       sdRef,
     DNSServiceFlags                     flags,
     DNSServiceErrorType                 errorCode,
     const char                          *name,
     const char                          *regtype,
     const char                          *domain,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceRegister
    (
     DNSServiceRef                       *sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     const char                          *name,         
     const char                          *regtype,
     const char                          *domain,       
     const char                          *host,         
     uint16_t                            port,
     uint16_t                            txtLen,
     const void                          *txtRecord,    
     DNSServiceRegisterReply             callBack,      
     void                                *context       
    );
    DNSServiceErrorType DNSSD_API DNSServiceAddRecord
    (
     DNSServiceRef                       sdRef,
     DNSRecordRef                        *RecordRef,
     DNSServiceFlags                     flags,
     uint16_t                            rrtype,
     uint16_t                            rdlen,
     const void                          *rdata,
     uint32_t                            ttl
     );
    DNSServiceErrorType DNSSD_API DNSServiceUpdateRecord
    (
     DNSServiceRef                       sdRef,
     DNSRecordRef                        RecordRef,     
     DNSServiceFlags                     flags,
     uint16_t                            rdlen,
     const void                          *rdata,
     uint32_t                            ttl
     );
    DNSServiceErrorType DNSSD_API DNSServiceRemoveRecord
    (
     DNSServiceRef                 sdRef,
     DNSRecordRef                  RecordRef,
     DNSServiceFlags               flags
     );
    typedef void (DNSSD_API *DNSServiceBrowseReply)
    (
     DNSServiceRef                       sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     DNSServiceErrorType                 errorCode,
     const char                          *serviceName,
     const char                          *regtype,
     const char                          *replyDomain,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceBrowse
    (
     DNSServiceRef                       *sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     const char                          *regtype,
     const char                          *domain,    
     DNSServiceBrowseReply               callBack,
     void                                *context    
    );
    typedef void (DNSSD_API *DNSServiceResolveReply)
    (
     DNSServiceRef                       sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     DNSServiceErrorType                 errorCode,
     const char                          *fullname,
     const char                          *hosttarget,
     uint16_t                            port,
     uint16_t                            txtLen,
     const unsigned char                 *txtRecord,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceResolve
    (
     DNSServiceRef                       *sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     const char                          *name,
     const char                          *regtype,
     const char                          *domain,
     DNSServiceResolveReply              callBack,
     void                                *context  
    );
    DNSServiceErrorType DNSSD_API DNSServiceCreateConnection(DNSServiceRef *sdRef);
    typedef void (DNSSD_API *DNSServiceRegisterRecordReply)
    (
     DNSServiceRef                       sdRef,
     DNSRecordRef                        RecordRef,
     DNSServiceFlags                     flags,
     DNSServiceErrorType                 errorCode,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceRegisterRecord
    (
     DNSServiceRef                       sdRef,
     DNSRecordRef                        *RecordRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     const char                          *fullname,
     uint16_t                            rrtype,
     uint16_t                            rrclass,
     uint16_t                            rdlen,
     const void                          *rdata,
     uint32_t                            ttl,
     DNSServiceRegisterRecordReply       callBack,
     void                                *context    
    );
    typedef void (DNSSD_API *DNSServiceQueryRecordReply)
    (
     DNSServiceRef                       DNSServiceRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     DNSServiceErrorType                 errorCode,
     const char                          *fullname,
     uint16_t                            rrtype,
     uint16_t                            rrclass,
     uint16_t                            rdlen,
     const void                          *rdata,
     uint32_t                            ttl,
     void                                *context
     );
    DNSServiceErrorType DNSSD_API DNSServiceQueryRecord
    (
     DNSServiceRef                       *sdRef,
     DNSServiceFlags                     flags,
     uint32_t                            interfaceIndex,
     const char                          *fullname,
     uint16_t                            rrtype,
     uint16_t                            rrclass,
     DNSServiceQueryRecordReply          callBack,
     void                                *context  
    );
    DNSServiceErrorType DNSSD_API DNSServiceReconfirmRecord
    (
     DNSServiceFlags                    flags,
     uint32_t                           interfaceIndex,
     const char                         *fullname,
     uint16_t                           rrtype,
     uint16_t                           rrclass,
     uint16_t                           rdlen,
     const void                         *rdata
     );
    int DNSSD_API DNSServiceConstructFullName
    (
     char                            *fullName,
     const char                      *service,      
     const char                      *regtype,
     const char                      *domain
     );
    typedef union _TXTRecordRef_t { char PrivateData[16]; char *ForceNaturalAlignment; } TXTRecordRef;